--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ReactNativeTypescriptExistingApp</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="show_nasa_photo">Show nasa photo</string>
 </resources>
